<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@android:drawable/ic_menu_today" />

    <item
        android:id="@+id/nav_farm"
        android:title="@string/nav_farm"
        android:icon="@android:drawable/ic_menu_mapmode" />

    <item
        android:id="@+id/nav_assistant"
        android:title="@string/nav_assistant"
        android:icon="@android:drawable/ic_menu_compass" />

    <item
        android:id="@+id/nav_insights"
        android:title="@string/nav_insights"
        android:icon="@android:drawable/ic_menu_sort_by_size" />

    <item
        android:id="@+id/nav_profile"
        android:title="@string/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces" />

</menu>
